--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.7",
+    "@rnmapbox/maps": "^10.0.0-beta.62",
+    "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "~47.0.9",
+    "expo-dev-client": "~2.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
