--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.7",
     "@rnmapbox/maps": "^10.0.0-beta.62",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "~47.0.9",
     "expo-dev-client": "~2.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-mapbox-gl": "^5.2.1-deprecated",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-searchbar": "^1.16.0",
+    "react-native-svg": "13.4.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@faker-js/faker": "^7.6.0",
     "@react-navigation/native": "^6.1.1"
   },
   "private": true
