--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~47.0.9",
     "expo-dev-client": "~2.0.1",
     "expo-status-bar": "~1.4.2",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-mapbox-gl": "^5.2.1-deprecated",
@@ -29,7 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@faker-js/faker": "^7.6.0",
-    "@react-navigation/native": "^6.1.1"
+    "@react-navigation/native": "^6.1.1",
+    "tailwindcss": "^3.2.4"
   },
   "private": true
 }
