--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@react-navigation/native-stack": "^6.9.7",
     "@rnmapbox/maps": "^10.0.0-beta.62",
     "@types/react": "~18.0.24",
